Add basic layout

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,3 +1,5 @@
 @import 'variables';
 @import 'utility/_normalize.scss';
 @import 'utility/_helper.scss';
+@import 'utility/typo.scss';
+@import 'modules/header.scss';
