Adding basic rating page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -3,3 +3,7 @@
 @import 'utility/_helper.scss';
 @import 'utility/typo.scss';
 @import 'modules/header.scss';
+@import 'modules/footer.scss';
+@import 'modules/rating.scss';
+@import 'modules/about.scss';
+@import 'modules/statistics.scss';
