--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,2 +1,3 @@
 $flopspot__primary: rgba(0, 147, 188, 1);
 $flopspot__primary_dark: rgba(0, 75, 114, 1);
+$flopspot__primary_green: rgba(0, 53, 76, 1);
