Outsource generic styling and fix white space issue

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -5,5 +5,8 @@
 @import 'modules/header.scss';
 @import 'modules/footer.scss';
 @import 'modules/rating.scss';
+@import 'modules/train-data.scss';
+@import 'modules/train-rating.scss';
 @import 'modules/about.scss';
 @import 'modules/statistics.scss';
+@import 'modules/dropdown.scss';
