--- a/src/assets/styles/utility/_typo.scss
+++ b/src/assets/styles/utility/_typo.scss
@@ -2,18 +2,9 @@ body {
   font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
 }
 
-main {
+#app {
   background-color: $flopspot__primary;
   height: calc(100vh + 400px);
-  padding: 5px;
-}
-
-.container {
-  width: 100%;
-  @media (min-width: 992px) {
-    width: 1200px;
-    margin: 0 auto;
-  }
 }
 
 .text--invisible {
@@ -26,4 +17,19 @@ main {
 
 .font--medium {
   font-size: 1.2rem;
+}
+
+.font--big {
+  font-size: 1.4rem;
+}
+
+.button {
+  background: $flopspot__primary_dark;
+  border: 0;
+  padding: 5px;
+  width: 100%;
+  max-width: 200px;
+  display: block;
+  color: white;
+  margin: 20px auto;
 }
