Outsource more into _typo

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -7,6 +7,5 @@
 @import 'modules/rating.scss';
 @import 'modules/train-data.scss';
 @import 'modules/train-rating.scss';
-@import 'modules/about.scss';
-@import 'modules/statistics.scss';
 @import 'modules/dropdown.scss';
+@import 'modules/app-info';
