--- a/src/assets/styles/mixins/container.scss
+++ b/src/assets/styles/mixins/container.scss
@@ -1,7 +1,8 @@
 @mixin container {
-  width: 100%;
+  width: calc(100% - 10px);
+  margin: 0 auto;
   @media (min-width: 992px) {
+    width: 100%;
     max-width: 1200px;
-    margin: 0 auto;
   }
 }
