--- a/src/assets/styles/modules/train-data.scss
+++ b/src/assets/styles/modules/train-data.scss
@@ -2,7 +2,9 @@
   .train-data {
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
     @media (min-width: 992px) {
+      margin-top: 50px;
       flex-direction: row;
       justify-content: space-between;
     }
