--- a/src/assets/styles/modules/train-rating.scss
+++ b/src/assets/styles/modules/train-rating.scss
@@ -6,6 +6,7 @@
     align-items: center;
     margin-top: 20px;
     @media (min-width: 992px) {
+      margin-top: 50px;
       flex-direction: row;
     }
     &__inputs {
