Add basic mock for train type results

--- a/src/assets/styles/modules/page.scss
+++ b/src/assets/styles/modules/page.scss
@@ -3,4 +3,10 @@
   height: 100%;
   justify-content: center;
   flex-direction: column;
+
+  @media screen and (min-width: 1024px) {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 }
