--- a/src/assets/styles/modules/pagination.scss
+++ b/src/assets/styles/modules/pagination.scss
@@ -4,7 +4,14 @@
   justify-content: space-between;
   flex-wrap: nowrap;
   margin-top: 20px;
+
   .button {
     width: calc(50% - 50px);
+  }
+  @media screen and (min-width: 1200px) {
+    justify-content: normal;
+    button:first-child {
+      margin-right: 15px;
+    }
   }
 }
