--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,3 +1,5 @@
-$flopspot__primary: rgba(0, 147, 188, 1);
-$flopspot__primary_dark: rgba(0, 75, 114, 1);
-$flopspot__primary_green: rgba(0, 53, 76, 1);
+$flopspot__primary: #FF5E62;
+$flopspot__orange: #FF9966;
+$flopspot__light: #ffffff;
+$flopspot__color: #000000;
+$flopspot_primary__color: #D95053;
